--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation("com.vladmihalcea:hibernate-types-60:2.20.0")
 	implementation 'org.postgresql:postgresql'
+	implementation 'io.hypersistence:hypersistence-utils-hibernate-62:3.5.0'
 }
 
 tasks.named('test') {
