feat: "챌린지 인증 API 구현"
세이버가 사진을 보낼 시 DB에 인증 data가 저장되는 API 구현

--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,8 @@ dependencies {
 	implementation("com.vladmihalcea:hibernate-types-60:2.20.0")
 	implementation 'org.postgresql:postgresql'
 	implementation 'io.hypersistence:hypersistence-utils-hibernate-62:3.5.0'
+	implementation('ch.qos.logback:logback-classic')
+	implementation('org.slf4j:slf4j-api')
 }
 
 tasks.named('test') {
