--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -48,7 +48,9 @@ jobs:
 
       # Docker 이미지 빌드
       - name: Docker Image Build
-        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME}}/${{ secrets.PROJECT_DEV_NAME }} .
+        run: |
+          docker build -t ${{ secrets.DOCKERHUB_USERNAME}}/${{ secrets.PROJECT_DEV_NAME }} .
+          docker images
 
       # DockerHub Push
       - name: DockerHub Push
