feat: "build.gradle 의존성 추가"

--- a/build.gradle
+++ b/build.gradle
@@ -27,11 +27,13 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation("com.vladmihalcea:hibernate-types-60:2.20.0")
+	implementation "com.vladmihalcea:hibernate-types-60:2.20.0"
 	implementation 'org.postgresql:postgresql'
 	implementation 'io.hypersistence:hypersistence-utils-hibernate-62:3.5.0'
-	implementation('ch.qos.logback:logback-classic')
-	implementation('org.slf4j:slf4j-api')
+	implementation 'ch.qos.logback:logback-classic'
+	implementation 'org.slf4j:slf4j-api'
+	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
+	implementation 'org.apache.poi:poi:5.0.0'
 }
 
 tasks.named('test') {
