--- a/.github/workflows/gradle-sentry.yml
+++ b/.github/workflows/gradle-sentry.yml
@@ -48,12 +48,12 @@ jobs:
       - name: Build with Gradle
         run: ./gradlew clean build --exclude-task test
 
-#      # DockerHub 로그인
-#      - name: DockerHub Login
-#        uses: docker/login-action@v2
-#        with:
-#          username: ${{ secrets.DOCKERHUB_USERNAME}}
-#          password: ${{ secrets.DOCKERHUB_PASSWORD}}
+     # DockerHub 로그인
+      - name: DockerHub Login
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME_SENTRY}}
+          password: ${{ secrets.DOCKERHUB_PASSWORD_SENTRY}}
 
       # Docker 이미지 빌드
       - name: Docker Image Build
