--- a/.github/workflows/gradle-dev.yml
+++ b/.github/workflows/gradle-dev.yml
@@ -12,6 +12,8 @@ on:
     branches: [ "develop" ]
   pull_request:
     branches: [ "develop" ]
+    paths:
+      - '**/application*.yml'
 
 permissions:
   contents: read
@@ -34,6 +36,9 @@ jobs:
       # Gradle Build를 위한 권한 부여
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
+
+      - name: Set Sentry
+        run: echo "${{ secrets.APPLICATION }}" > ./src/main/resources/application.yml
 
       # Gradle Build (test 제외)
       - name: Build with Gradle
