--- a/.github/workflows/gradle-release.yml
+++ b/.github/workflows/gradle-release.yml
@@ -35,6 +35,10 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
+      # Sentry
+      - name: Set Sentry
+        run: echo "${{ secrets.APPLICATION_PRODUCTION }}" > ./src/main/resources/application.yml
+
       # Gradle Build (test 제외)
       - name: Build with Gradle
         run: ./gradlew clean build --exclude-task test
