feat: h2 데이터베이스 라이브러리 추가
- build.gradle에 h2 데이터베이스 의존성을 추가

--- a/build.gradle
+++ b/build.gradle
@@ -39,8 +39,8 @@ dependencies {
 	implementation 'io.sentry:sentry-logback:6.25.2'
 	//swagger
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
-
-
+	//h2
+	implementation 'com.h2database:h2:1.4.200'
 }
 
 tasks.named('test') {
@@ -48,4 +48,3 @@ tasks.named('test') {
 }
 
 jar { enabled = false }
-
